added node version to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mute",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "0.10.29"
+  },
   "scripts": {
     "postinstall": "bower install",
     "start": "node ./bin/www",
