--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-session": "^1.7.2",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "newrelic": "^1.9.1",
+    "node-monkey": "^0.2.9",
     "oauth": "^0.9.12",
     "passport": "^0.2.0",
     "passport-oauth": "^1.0.0",
@@ -26,7 +28,6 @@
     "twit": "^1.1.18"
   },
   "devDependencies": {
-    "node-monkey": "^0.2.9",
     "nodemon": "^1.2.1"
   }
 }
